fix overflow

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -23,6 +23,7 @@ body {
   color: #000;
   font-size: 1.6rem;
   font-weight: 400;
+  overflow-x: hidden !important;
 }
 .text-yellow {
   color: #ffc107 !important;
